--- a/Naver Dark.verbose.user.css
+++ b/Naver Dark.verbose.user.css
@@ -2,7 +2,7 @@
 @name			Naver Dark
 @author			OrigamiDream
 @description	Dark mode for NAVER
-@version		1.48.755
+@version		1.48.756
 @namespace		Avis Studio
 @license		CC BY-NC-SA
 @preprocessor	default
@@ -13662,10 +13662,6 @@
 	
 	.pc_check a {
 		color: #cacaca;
-	}
-	
-	#header .lang .sel {
-		filter: invert(86%) hue-rotate(-180deg);
 	}
 	
 	.find_info {
